Bug 1502476 - Handle failure when parsing field initializer. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D9956